Minor style changes

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
                     <div class="flex-container">
                         <div style="width: 50%; text-align:center; margin: 0 auto;">
-                            <img style="width: 70%;" src="images/utscblue.png" alt="">
+                            <img style="width: 60%;" src="images/utscblue.png" alt="">
                         </div>
                         <div style="padding:1%; margin:0 auto; text-align: center;">
                             <span>
@@ -252,7 +252,7 @@
                             </span>
 
                             <div class="flex-container" style="padding-top:60px;margin: 0 -100px; ">
-                                <section class="card">
+                                <div class="card">
                                     <div class="card-body">
                                         <h3 class="card-head">TicTacToe</h3>
                                         <div class="card-text">
@@ -284,7 +284,7 @@
                                             </p>
                                         </div>
                                     </footer>
-                                </section>
+                                </div>
 
                                 <section class="card">
                                     <div class="card-body">
