--- a/index.html
+++ b/index.html
@@ -114,21 +114,24 @@
             </div>
         </section>
 
-
-        <section id="education" style="background-color: #f5f5f5; padding: 30px 0px 0px 0px;">
-            <div style="width: 80%; margin:0 auto;">
+        <!-- Education -->
+        <section id="education" style="background-color: #f5f5f5;">
+            <!-- Head -->
+            <div class="margin-center" style="width: 80%;">
                 <div style="padding: 5%;">
-                    <div class="headline" style="line-height:50px;">
-                        <div style="text-align:initial; padding: 0 4%;">
+                    <div class="headline">
+                        <div>
                             <h2 class="header underline">Education</h2>
                         </div>
                     </div>
-
+                    <!-- Body -->
                     <div class="flex-container">
-                        <div style="width: 50%; text-align:center; margin: 0 auto;">
-                            <img style="width: 60%;" src="images/utscblue.png" alt="">
+                        <!-- UTSC -->
+                        <div class="margin-center text-center" style="width: 50%;">
+                            <img style="width: 60%;" src="images/utscblue.png" alt="UTSC">
                         </div>
-                        <div style="padding:1%; margin:0 auto; text-align: center;">
+                        <!-- Text Body -->
+                        <div class="margin-center text-center" style="padding:1%;">
                             <span>
                                 <p>
                                     Currently enrolled at University of Toronto
