minor html changes for education

--- a/index.html
+++ b/index.html
@@ -117,18 +117,18 @@
         <!-- Education -->
         <section id="education" style="background-color: #f5f5f5;">
             <!-- Head -->
-            <div class="margin-center" style="width: 80%;">
+            <div class="margin-center" >
                 <div style="padding: 5%;">
-                    <div class="headline">
+                    <div class="headline margin-center" style="width: 40%;">
                         <div>
                             <h2 class="header underline">Education</h2>
                         </div>
                     </div>
                     <!-- Body -->
-                    <div class="flex-container">
+                    <div class="flex-container margin-center" style="width: 80%;">
                         <!-- UTSC -->
                         <div class="margin-center text-center" style="width: 50%;">
-                            <img style="width: 60%;" src="images/utscblue.png" alt="UTSC">
+                            <img style="width: 55%;" src="images/utscblue.png" alt="UTSC">
                         </div>
                         <!-- Text Body -->
                         <div class="margin-center text-center" style="padding:1%;">
