updated skills html

--- a/index.html
+++ b/index.html
@@ -150,85 +150,106 @@
             </div>
         </section>
 
-        <section id="skills" style="background-color: white; padding: 30px 0px 0px 0px; height: auto !important;">
-            <div style="width: 80%; margin:0 auto;">
+        <section id="skills" style="background-color: white;">
+            <div class="margin-center">
                 <div style="padding: 5%;">
-                    <div class="headline" style="line-height:50px;">
-                        <div style="">
-                            <h2 class="header"
-                                style=" border-color: #fcb934; border-width: 0px 0px 1px 0px; border-style: solid;">
-                                Skills</h2>
+                    <div class="headline margin-center" style="width: 40%;">
+                        <div>
+                            <h2 class="header underline">Skills</h2>
                         </div>
                     </div>
-
-                    <div
-                        style="display:flex; justify-content: space-evenly; align-items: baseline; flex-wrap: wrap; text-align: center;">
-                        <div style="padding:4%; text-align: center; margin:0 auto; flex-shrink: 5;">
+                    <!-- Text Body -->
+                <div class="flex-container margin-center" style="width: 60%; max-width: 1800px;">
+                    <div style="display:flex; justify-content: space-evenly; align-items: baseline; flex-wrap: wrap; text-align: center;">
+                        <div class="text-center margin-center" style="padding:4%; width: 100%;">
                             <span>
-                                Here are some of the skills I've gained while working at Iseehear, from personal projects, and through school.
+                                <p>
+                                    Here are some of the skills I've gained while working at Iseehear, from personal projects, and through school.
+                                </p>
                             </span>
                         </div>
+                        <!-- Front End -->
                         <section>
                             <div class="card-body">
                                 <h3>Front End</h3>
                                 <div>
                                     <ul class="tags">
-                                        <li><span>HTML</span></li>
-                                        <li><span>CSS</span></li>
-                                        <li><span>JS</span></li>
+                                        <p>
+                                            <li><span>HTML</span></li>
+                                            <li><span>CSS</span></li>
+                                            <li><span>JS</span></li>
+                                        </p>
                                     </ul>
                                 </div>
                             </div>
                         </section>
+                        <!-- Back End -->
                         <section>
                             <div class="card-body">
                                 <h3>Back End</h3>
                                 <div>
                                     <ul class="tags">
-                                        <li><span>node.js</span></li>
-                                        <li><span>php</span></li>
-                                        <li><span>MySQL</span></li>
+                                        <p>
+                                            <li><span>node.js</span></li>
+                                            <li><span>php</span></li>
+                                            <li><span>MySQL</span></li>
+                                        </p>
                                     </ul>
                                 </div>
                             </div>
                         </section>
+                        <!-- Cloud/Tools -->
                         <section>
                             <div class="card-body">
                                 <h3>Cloud/Tools</h3>
                                 <div>
                                     <ul class="tags">
-                                        <li><span>GCP</span></li>
-                                        <li><span>Firebase</span></li>
-                                        <li><span>GitHub</span></li>
-                                        <li><span>DialogFlow</span></li>
-                                        <li><span>Actions</span></li>
+                                        <p>
+                                            <li><span>GCP</span></li>
+                                            <li><span>Firebase</span></li>
+                                            <li><span>GitHub</span></li>
+                                        </p>
+                                        <p>
+                                            <li><span>DialogFlow</span></li>
+                                            <li><span>Actions</span></li>
+                                        </p>
                                     </ul>
                                 </div>
                             </div>
                         </section>
+                        <!-- Management/Design -->
                         <section>
                             <div class="card-body">
                                 <h3>Management/Design</h3>
                                 <div>
                                     <ul class="tags">
-                                        <li><span>Trello</span></li>
-                                        <li><span>Whimsical</span></li>
-                                        <li><span>Figma</span></li>
-                                        <li><span>Sketch</span></li>
-                                        <li><span>Zepplin</span></li>
+                                        <p>
+                                            <li><span>Trello</span></li>
+                                            <li><span>Whimsical</span></li>
+                                            <li><span>Figma</span></li>
+                                        </p>
+                                        <p>
+                                            <li><span>Sketch</span></li>
+                                            <li><span>Zepplin</span></li>
+                                        </p>
                                     </ul>
                                 </div>
                             </div>
                         </section>
+                        <!-- Other -->
                         <section>
                             <div class="card-body">
                                 <h3>Other</h3>
                                 <div>
                                     <ul class="tags">
-                                        <li><span>Java</span></li>
-                                        <li><span>Python</span></li>
-                                        <li><span>C</span></li>
-                                        <li><span>Turing</span></li>
+                                        <p>
+                                            <li><span>Java</span></li>
+                                            <li><span>Python</span></li>
+                                            <li><span>C</span></li>
+                                        </p>
+                                        <p>
+                                            <li><span>Turing</span></li>
+                                        </p>
                                     </ul>
                                 </div>
                             </div>
