minor css/html changes

--- a/index.html
+++ b/index.html
@@ -276,14 +276,17 @@
                             </span>
 
                             <div class="flex-container" style="padding-top:60px;margin: 0 -100px; ">
-                                <div class="card">
+                                <!-- TicTacToe -->
+                                <section class="card">
                                     <div class="card-body">
                                         <h3 class="card-head">TicTacToe</h3>
                                         <div class="card-text">
                                             <span>
-                                                A 3D TicTacToe Game. Check out the instructions 
-                                                <a href="https://github.com/AhmedHalat/2DTicTacToe/blob/master/README.md" target="_blank" rel="noreferrer">here</a>.
-                                                This project is still incomplete
+                                                <p>
+                                                    A 3D TicTacToe Game. Check out the instructions 
+                                                    <a href="https://github.com/AhmedHalat/2DTicTacToe/blob/master/README.md" target="_blank" rel="noreferrer">here</a>.
+                                                    This project is still incomplete
+                                                </p>
                                             </span>
                                         </div>
                                         <div class="card-tags">
@@ -308,16 +311,19 @@
                                             </p>
                                         </div>
                                     </footer>
-                                </div>
-
+                                </section>
+                                
+                                <!-- Dungeon Diver -->
                                 <section class="card">
                                     <div class="card-body">
                                         <h3>Dungeon Diver</h3>
                                         <div>
                                             <span>
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing
-                                                elit, sed do eiusmod tempor incididunt ut labore et
-                                                dolore magna aliqua.
+                                                <p>
+                                                    Lorem ipsum dolor sit amet, consectetur adipiscing
+                                                    elit, sed do eiusmod tempor incididunt ut labore et
+                                                    dolore magna aliqua.
+                                                </p>
                                             </span>
                                             <ul class="tags">
                                                 <li><span>Java</span></li>
@@ -342,6 +348,7 @@
                                     </footer>
                                 </section>
 
+                                <!-- Mario -->
                                 <section class="card">
                                     <div class="card-body">
                                         <h3>Mario</h3>
@@ -368,6 +375,7 @@
                                     </footer>
                                 </section>
 
+                                <!-- Rodent Id -->
                                 <section class="card">
                                     <div class="card-body">
                                         <h3>Rodent Id</h3>
@@ -395,6 +403,7 @@
                                     </footer>
                                 </section>
 
+                                <!-- Breeding Calculator -->
                                 <section class="card">
                                     <div class="card-body">
                                         <h3>Breeding Calculator</h3>
@@ -422,6 +431,7 @@
                                     </footer>
                                 </section>
 
+                                <!-- PDF Parser -->
                                 <section class="card">
                                     <div class="card-body">
                                         <h3>PDF Parse</h3>
@@ -449,6 +459,7 @@
                                     </footer>
                                 </section>
 
+                                <!-- Bots -->
                                 <section class="card">
                                     <div class="card-body">
                                         <h3>Bots</h3>
@@ -477,6 +488,7 @@
                                     </footer>
                                 </section>
 
+                                <!-- Kibana -->
                                 <section class="card">
                                     <div class="card-body">
                                         <h3>Kibana</h3>
@@ -525,7 +537,9 @@
                         <div style="padding: 2%;">
                             <div style="margin: 0 auto 15px; color: white;">
                                 <span>
-                                    Thanks for stopping by! If you have any questions, comments or would just like to contact me, you can reach me from the link below.
+                                    <p>
+                                        Thanks for stopping by! If you have any questions, comments or would just like to contact me, you can reach me from the link below.
+                                    </p>
                                 </span>
                             </div>
                             <div style="color:white;">
