--- a/index.html
+++ b/index.html
@@ -312,19 +312,19 @@
                                         </div>
                                     </footer>
                                 </section>
-                                
+
                                 <!-- Dungeon Diver -->
                                 <section class="card">
                                     <div class="card-body">
-                                        <h3>Dungeon Diver</h3>
-                                        <div>
+                                        <h3 class="card-head">Dungeon Diver</h3>
+                                        <div class="card-text">
                                             <span>
                                                 <p>
-                                                    Lorem ipsum dolor sit amet, consectetur adipiscing
-                                                    elit, sed do eiusmod tempor incididunt ut labore et
-                                                    dolore magna aliqua.
+                                                    A top down dungeon crawler made for grade 12 final. Made as a group and recieved 100%
                                                 </p>
                                             </span>
+                                        </div>
+                                        <div class="card-tags">
                                             <ul class="tags">
                                                 <li><span>Java</span></li>
                                                 <li><span>OOP</span></li>
@@ -333,17 +333,17 @@
                                         </div>
                                     </div>
                                     <footer class="card-footer">
-                                        <div class="card-footer-content"
-                                            style="display: flex; justify-content: space-around;">
-                                            <!-- <p ><a style="color: #0000b5; text-decoration: none;" href="/projects/TicTacToe/">Live</a></p> -->
-                                            <p><a style="color: #0000b5; text-decoration: none;"
-                                                    href="https://github.com/AhmedHalat/FinalGame" target="_blank"
-                                                    rel="noreferrer" title="GitHub">Code</a>
-                                            </p>
-                                            <p><a style="color: #0000b5; text-decoration: none;"
-                                                    href="https://whimsical.com/XRnDKKfsQ9CrTStVnGK3qq" target="_blank"
-                                                    rel="noreferrer" title="Whimsical">Design</a>
-                                            </p>
+                                        <div class="card-footer-content">
+                                            <p>
+                                                <a style="color: #0000b5; text-decoration: none;"href="https://github.com/AhmedHalat/FinalGame" target="_blank"rel="noreferrer" title="GitHub">
+                                                Code
+                                            </a>
+                                        </p>
+                                        <p>
+                                            <a style="color: #0000b5; text-decoration: none;"href="https://whimsical.com/XRnDKKfsQ9CrTStVnGK3qq" target="_blank"rel="noreferrer" title="Whimsical">
+                                                Design
+                                            </a>
+                                        </p>
                                         </div>
                                     </footer>
                                 </section>
@@ -351,13 +351,15 @@
                                 <!-- Mario -->
                                 <section class="card">
                                     <div class="card-body">
-                                        <h3>Mario</h3>
-                                        <div>
+                                        <h3 class="card-head">Mario</h3>
+                                        <div class="card-text">
                                             <span>
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing
-                                                elit, sed do eiusmod tempor incididunt ut labore et
-                                                dolore magna aliqua.
+                                                <p>
+                                                    A side scolling Mario-esq replica. Made as a grade 11 final. Received a final grade of 100%
+                                                </p>
                                             </span>
+                                        </div>
+                                        <div class="card-tags">
                                             <ul class="tags">
                                                 <li><span>Java</span></li>
                                                 <li><span>OOP</span></li>
@@ -365,12 +367,12 @@
                                         </div>
                                     </div>
                                     <footer class="card-footer">
-                                        <div class="card-footer-content"
-                                            style="display: flex; justify-content: space-around;">
-                                            <!-- <p ><a style="color: #0000b5; text-decoration: none;" href="/projects/TicTacToe/">Live</a></p> -->
-                                            <p><a style="color: #0000b5; text-decoration: none;"
-                                                    href="https://github.com/MohamedHalat/Mario" target="_blank"
-                                                    rel="noreferrer" title="GitHub">Code</a></p>
+                                        <div class="card-footer-content">
+                                            <p>
+                                                <a style="color: #0000b5; text-decoration: none;"href="https://github.com/MohamedHalat/Mario" target="_blank"rel="noreferrer" title="GitHub">
+                                                Code
+                                            </a>
+                                        </p>
                                         </div>
                                     </footer>
                                 </section>
