updated education section

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         </div>
                     </div>
                     <!-- Body -->
-                    <div class="flex-container margin-center" style="width: 80%;">
+                    <div class="flex-container margin-center" style="width: 60%; max-width: 1800px;">
                         <!-- UTSC -->
                         <div class="margin-center text-center" style="width: 50%;">
                             <img style="width: 55%;" src="images/utscblue.png" alt="UTSC">
