added header element

--- a/index.html
+++ b/index.html
@@ -23,37 +23,39 @@
 </head>
 
 <body>
+    <header style="position:fixed; width: 100%; background-color: white;">
     <!-- Nav -->
-    <nav>
-        <div class="headline" style="display: inline-flex;">
-            <div style="margin:auto 10 auto 50">
-                <span class="header">Mohamed Halat</span>
+        <nav>
+            <div class="headline" style="display: inline-flex;">
+                <div style="margin:auto 10 auto 50">
+                    <span class="header">Mohamed Halat</span>
+                </div>
             </div>
-        </div>
-        <ul>
-            <li>
-                <a href="#home">Home</a>
-            </li>
-            <li>
-                <a href="#about">About</a>
-            </li>
-            <li>
-                <a href="#education">Education</a>
-            </li>
-            <li>
-                <a href="#skills">Skills</a>
-            </li>
-            <li>
-                <a href="#code">Code</a>
-            </li>
-            <li>
-                <a href="#contact">Contact</a>
-            </li>
-        </ul>
-    </nav>
-    <footer class="nav-footer" style="height: 2px;width:100%; background-color: #fcb934; position: fixed;">
-    </footer>
-    <!-- Main Body -->
+            <ul>
+                <li>
+                    <a href="#home">Home</a>
+                </li>
+                <li>
+                    <a href="#about">About</a>
+                </li>
+                <li>
+                    <a href="#education">Education</a>
+                </li>
+                <li>
+                    <a href="#skills">Skills</a>
+                </li>
+                <li>
+                    <a href="#code">Code</a>
+                </li>
+                <li>
+                    <a href="#contact">Contact</a>
+                </li>
+            </ul>
+        </nav>
+        <footer class="nav-footer" style="height:2px;width:100%; background-color: #fcb934; position: fixed;">
+        </footer>
+    </header>
+        <!-- Main Body -->
     <main>
         <section id="home"
             style="background:linear-gradient(90deg, #4B6CB7 0%, #182848 100%);overflow-y: hidden; height: 40%;">
