fixed size of utsc image

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <!-- Body -->
                     <div class="flex-container margin-center" style="width: 60%; max-width: 1800px;">
                         <!-- UTSC -->
-                        <div class="margin-center text-center" style="width: 50%;">
+                        <div class="margin-center text-center" style="width: 50%; min-width: 400px;">
                             <img style="width: 55%;" src="images/utscblue.png" alt="UTSC">
                         </div>
                         <!-- Text Body -->
