--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
             </div>
         </section>
 
+        <!-- Skills -->
         <section id="skills" style="background-color: white;">
             <div class="margin-center">
                 <div style="padding: 5%;">
@@ -261,6 +262,7 @@
             </div>
         </section>
 
+        <!-- Projects -->
         <section id="code" style="background-color: #f5f5f5; padding: 30px 0px 0px 0px; height: auto !important;">
             <div style="width: 80%; margin:0 auto;">
                 <div style="padding: 5%;">
@@ -382,13 +384,15 @@
                                 <!-- Rodent Id -->
                                 <section class="card">
                                     <div class="card-body">
-                                        <h3>Rodent Id</h3>
-                                        <div>
+                                        <h3 class="card-head">Rodent ID</h3>
+                                        <div class="card-text">
                                             <span>
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing
-                                                elit, sed do eiusmod tempor incididunt ut labore et
-                                                dolore magna aliqua.
+                                                <p>
+                                                    A web tool to figure out how to notch a rodent's ear in order to identify them
+                                                </p>
                                             </span>
+                                        </div>
+                                        <div class="card-tags">
                                             <ul class="tags">
                                                 <li><span>HTML</span></li>
                                                 <li><span>CSS</span></li>
@@ -397,12 +401,12 @@
                                         </div>
                                     </div>
                                     <footer class="card-footer">
-                                        <div class="card-footer-content"
-                                            style="display: flex; justify-content: space-around;">
-                                            <!-- <p ><a style="color: #0000b5; text-decoration: none;" href="/projects/TicTacToe/">Live</a></p> -->
-                                            <p><a style="color: #0000b5; text-decoration: none;"
-                                                    href="https://www.rodentid.com/?earmark=343" target="_blank"
-                                                    rel="noreferrer" title="rodentid.com">Live</a></p>
+                                        <div class="card-footer-content">
+                                            <p>
+                                                <a style="color: #0000b5; text-decoration: none;"href="https://www.rodentid.com/?earmark=343" target="_blank"rel="noreferrer" title="rodentid.com">
+                                                Live
+                                            </a>
+                                        </p>
                                         </div>
                                     </footer>
                                 </section>
@@ -410,13 +414,15 @@
                                 <!-- Breeding Calculator -->
                                 <section class="card">
                                     <div class="card-body">
-                                        <h3>Breeding Calculator</h3>
-                                        <div>
+                                        <h3 class="card-head">Breeding Calculator</h3>
+                                        <div class="card-text">
                                             <span>
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing
-                                                elit, sed do eiusmod tempor incididunt ut labore et
-                                                dolore magna aliqua.
+                                                <p>
+                                                    A calculator used to calculate the cost of maintaining a lab compared to softmouse
+                                                </p>
                                             </span>
+                                        </div>
+                                        <div class="card-tags">
                                             <ul class="tags">
                                                 <li><span>HTML</span></li>
                                                 <li><span>CSS</span></li>
@@ -425,12 +431,12 @@
                                         </div>
                                     </div>
                                     <footer class="card-footer">
-                                        <div class="card-footer-content"
-                                            style="display: flex; justify-content: space-around;">
-                                            <!-- <p ><a style="color: #0000b5; text-decoration: none;" href="/projects/TicTacToe/">Live</a></p> -->
-                                            <p><a style="color: #0000b5; text-decoration: none;"
-                                                    href="https://www.rodentid.com/?earmark=343" target="_blank"
-                                                    rel="noreferrer" title="">Live</a></p>
+                                        <div class="card-footer-content">
+                                            <p>
+                                                <a style="color: #0000b5; text-decoration: none;"href="https://www.rodentid.com/?earmark=343" target="_blank"rel="noreferrer" title="rodentid.com">
+                                                Live
+                                            </a>
+                                        </p>
                                         </div>
                                     </footer>
                                 </section>
@@ -438,27 +444,30 @@
                                 <!-- PDF Parser -->
                                 <section class="card">
                                     <div class="card-body">
-                                        <h3>PDF Parse</h3>
-                                        <div>
+                                        <h3 class="card-head">PDF Parser</h3>
+                                        <div class="card-text">
                                             <span>
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing
-                                                elit, sed do eiusmod tempor incididunt ut labore et
-                                                dolore magna aliqua.
+                                                <p>
+                                                    A web tool to parse important information from a pdf
+                                                </p>
                                             </span>
+                                        </div>
+                                        <div class="card-tags">
                                             <ul class="tags">
                                                 <li><span>node.js</span></li>
                                                 <li><span>MySQL</span></li>
                                                 <li><span>JS</span></li>
+                                                <li><span>Kibana</span></li>
                                             </ul>
                                         </div>
                                     </div>
                                     <footer class="card-footer">
-                                        <div class="card-footer-content"
-                                            style="display: flex; justify-content: space-around;">
-                                            <!-- <p ><a style="color: #0000b5; text-decoration: none;" href="/projects/TicTacToe/">Live</a></p> -->
-                                            <p><a style="color: #0000b5; text-decoration: none;"
-                                                    href="https://github.com/MohamedHalat/ElkStack-Finance" target="_blank" rel="noreferrer"
-                                                    title="GitHub">Code</a></p>
+                                        <div class="card-footer-content">
+                                            <p>
+                                                <a style="color: #0000b5; text-decoration: none;"href="https://github.com/MohamedHalat/ElkStack-Finance" target="_blank"rel="noreferrer" title="rodentid.com">
+                                                Live
+                                            </a>
+                                        </p>
                                         </div>
                                     </footer>
                                 </section>
@@ -466,12 +475,15 @@
                                 <!-- Bots -->
                                 <section class="card">
                                     <div class="card-body">
-                                        <h3>Bots</h3>
-                                        <div>
+                                        <h3 class="card-head">Bots</h3>
+                                        <div class="card-text">
                                             <span>
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing
-                                                elit, sed do eiusmod tempor incididunt.
+                                                <p>
+                                                    A bot that manages GCP virtual machines and is implemented on discord
+                                                </p>
                                             </span>
+                                        </div>
+                                        <div class="card-tags">
                                             <ul class="tags">
                                                 <li><span>DialogFlow</span></li>
                                                 <li><span>GCP</span></li>
@@ -482,12 +494,12 @@
                                         </div>
                                     </div>
                                     <footer class="card-footer">
-                                        <div class="card-footer-content"
-                                            style="display: flex; justify-content: space-around;">
-                                            <!-- <p ><a style="color: #0000b5; text-decoration: none;" href="/projects/TicTacToe/">Live</a></p> -->
-                                            <p><a style="color: #0000b5; text-decoration: none;"
-                                                    href="https://github.com/AhmedHalat/ServerManager" target="_blank" rel="noreferrer"
-                                                    title="GitHub">Code</a></p>
+                                        <div class="card-footer-content">
+                                            <p>
+                                                <a style="color: #0000b5; text-decoration: none;"href="https://github.com/MohamedHalat/ServerManager" target="_blank"rel="noreferrer" title="GitHub">
+                                                Code
+                                            </a>
+                                        </p>
                                         </div>
                                     </footer>
                                 </section>
@@ -495,12 +507,15 @@
                                 <!-- Kibana -->
                                 <section class="card">
                                     <div class="card-body">
-                                        <h3>Kibana</h3>
-                                        <div>
+                                        <h3 class="card-head">Kibana</h3>
+                                        <div class="card-text">
                                             <span>
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing
-                                                elit, sed do eiusmod tempor incididunt.
+                                                <p>
+                                                    Used to visualize data from mySQL injested from elasticsearch and logstash
+                                                </p>
                                             </span>
+                                        </div>
+                                        <div class="card-tags">
                                             <ul class="tags">
                                                 <li><span>Logstash</span></li>
                                                 <li><span>elasticsearch</span></li>
@@ -511,17 +526,17 @@
                                         </div>
                                     </div>
                                     <footer class="card-footer">
-                                        <div class="card-footer-content"
-                                            style="display: flex; justify-content: space-around;">
-                                            <!-- <p ><a style="color: #0000b5; text-decoration: none;" href="/projects/TicTacToe/">Live</a></p> -->
-                                            <p><a style="color: #0000b5; text-decoration: none;"
-                                                    href="https://github.com/MohamedHalat/ElkStack-Finance" target="_blank" rel="noreferrer"
-                                                    title="GitHub">Code</a></p>
+                                        <div class="card-footer-content">
+                                            <p>
+                                                <a style="color: #0000b5; text-decoration: none;"href="https://github.com/MohamedHalat/ElkStack-Finance" target="_blank"rel="noreferrer" title="GitHub">
+                                                Code
+                                            </a>
+                                        </p>
                                         </div>
                                     </footer>
                                 </section>
-                            </div>
 
+                            </div>
                         </div>
                     </div>
                 </div>
