added analytics tool

--- a/index.html
+++ b/index.html
@@ -536,6 +536,39 @@
                                     </footer>
                                 </section>
 
+                                <!-- Analytics -->
+                                <section class="card">
+                                    <div class="card-body">
+                                        <h3 class="card-head">Analytics Tool</h3>
+                                        <div class="card-text">
+                                            <span>
+                                                <p>
+                                                    An analytics tool that visualizes bigquery covid-19 data using google charts
+                                                </p>
+                                            </span>
+                                        </div>
+                                        <div class="card-tags">
+                                            <ul class="tags">
+                                                <li><span>HTML</span></li>
+                                                <li><span>CSS</span></li>
+                                                <li><span>JS</span></li>
+                                                <li><span>PHP</span></li>
+                                                <li><span>GCP</span></li>
+                                                <li><span>Google Charts</span></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <footer class="card-footer">
+                                        <div class="card-footer-content">
+                                            <p>
+                                                <a style="color: #0000b5; text-decoration: none;"href="https://github.com/MohamedHalat/AnalyticsTool" target="_blank"rel="noreferrer" title="GitHub">
+                                                Code
+                                            </a>
+                                        </p>
+                                        </div>
+                                    </footer>
+                                </section>
+
                             </div>
                         </div>
                     </div>
