added live kibana link

--- a/index.html
+++ b/index.html
@@ -511,17 +511,18 @@
                                         <div class="card-text">
                                             <span>
                                                 <p>
-                                                    Used to visualize data from mySQL injested from elasticsearch and logstash
+                                                    <!-- Used to visualize data from mySQL injested from elasticsearch and logstash. Currently live on Kubernetes -->
+                                                    Launched ELK Stack on kubernetes to visualize user login and session data from mySQL
                                                 </p>
                                             </span>
                                         </div>
                                         <div class="card-tags">
                                             <ul class="tags">
-                                                <li><span>Logstash</span></li>
-                                                <li><span>elasticsearch</span></li>
+                                                <!-- <li><span>Logstash</span></li> -->
+                                                <li><span>ELK Stack</span></li>
                                                 <li><span>MySQL</span></li>
-                                                <li><span>Kibana</span></li>
-                                                <li><span>GCP</span></li>
+                                                <!-- <li><span>Kibana</span></li> -->
+                                                <li><span>Kubernetes</span></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -530,6 +531,11 @@
                                             <p>
                                                 <a style="color: #0000b5; text-decoration: none;"href="https://github.com/MohamedHalat/ElkStack-Finance" target="_blank"rel="noreferrer" title="GitHub">
                                                 Code
+                                            </a>
+                                        </p>
+                                            <p>
+                                                <a style="color: #0000b5; text-decoration: none;"href="http://kibana.mohamedhalat.com" target="_blank"rel="noreferrer" title="mohamed-halat">
+                                                Live
                                             </a>
                                         </p>
                                         </div>
