Changed Analytics Link

--- a/index.html
+++ b/index.html
@@ -569,8 +569,13 @@
                                             <p>
                                                 <a style="color: #0000b5; text-decoration: none;"href="https://github.com/MohamedHalat/AnalyticsTool" target="_blank"rel="noreferrer" title="GitHub">
                                                 Code
-                                            </a>
-                                        </p>
+                                                </a>
+                                            </p>
+                                            <p>
+                                                <a style="color: #0000b5; text-decoration: none;"href="https://covid.mohamedhalat.com" target="_blank"rel="noreferrer" title="GitHub">
+                                                Live
+                                                </a>
+                                            </p>
                                         </div>
                                     </footer>
                                 </section>
