chore: Add some skills from verto

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         </div>
                     </div>
                 </div>
-                <h3 class="text-emphasis">Currently under construction! 
+                <h3 class="text-emphasis">Currently under construction!
                     <a class="text-emphasis" target="_blank" rel="noreferrer" href="https://github.com/MohamedHalat/Personal-Site/">View Project</a>
                 </h3>
             </div>
@@ -102,10 +102,10 @@
                     <div class="margin-center text-center">
                         <span>
                             <p>
-                                Hi! I'm Mohamed Halat, a student who likes to code.
+                                Hi! I'm Mohamed Halat, a student at the <span class="text-emphasis">University of Toronto</span>.
                             </p>
                             <p>
-                                I am also currently a part time SDE intern at <span class="text-emphasis">Iseehear</span>.
+                                I am also currently a Junior Full-Stack developer at <a href="https://verto.health/" target="_blank" class="text-emphasis">Verto Health</a>.
                             </p>
                             <p>
                                 You can view my old site <a href="/old.html" target="_blank" rel="noreferrer" class="text-emphasis">here</a>.
@@ -140,7 +140,7 @@
                                 </p>
                                 <p>
                                     Scarborough in the
-                                    <span class="text-emphasis">Computer Science</span> 
+                                    <span class="text-emphasis">Computer Science</span>
                                 </p>
                                 <p>
                                       Coop Program.
@@ -178,9 +178,9 @@
                                 <div>
                                     <ul class="tags">
                                         <p>
-                                            <li><span>HTML</span></li>
-                                            <li><span>CSS</span></li>
-                                            <li><span>JS</span></li>
+                                            <li><span>Vue</span></li>
+                                            <li><span>Angular</span></li>
+                                            <li><span>Rails</span></li>
                                         </p>
                                     </ul>
                                 </div>
@@ -193,9 +193,13 @@
                                 <div>
                                     <ul class="tags">
                                         <p>
-                                            <li><span>node.js</span></li>
-                                            <li><span>php</span></li>
-                                            <li><span>MySQL</span></li>
+                                            <li><span>Node</span></li>
+                                            <li><span>Rails</span></li>
+                                            <li><span>Flask</span></li>
+                                        </p>
+                                        <p>
+                                            <li><span>SQL</span></li>
+                                            <li><span>MongoDB</span></li>
                                         </p>
                                     </ul>
                                 </div>
@@ -213,8 +217,8 @@
                                             <li><span>GitHub</span></li>
                                         </p>
                                         <p>
-                                            <li><span>DialogFlow</span></li>
-                                            <li><span>Actions</span></li>
+                                            <li><span>Docker</span></li>
+                                            <li><span>Kubernetes</span></li>
                                         </p>
                                     </ul>
                                 </div>
@@ -227,11 +231,12 @@
                                 <div>
                                     <ul class="tags">
                                         <p>
+                                            <li><span>Jira</span></li>
                                             <li><span>Trello</span></li>
-                                            <li><span>Whimsical</span></li>
                                             <li><span>Figma</span></li>
                                         </p>
                                         <p>
+                                            <li><span>Whimsical</span></li>
                                             <li><span>Sketch</span></li>
                                             <li><span>Zepplin</span></li>
                                         </p>
@@ -242,7 +247,7 @@
                         <!-- Other -->
                         <section>
                             <div class="card-body">
-                                <h3>Other</h3>
+                                <h3>More</h3>
                                 <div>
                                     <ul class="tags">
                                         <p>
@@ -251,7 +256,8 @@
                                             <li><span>C</span></li>
                                         </p>
                                         <p>
-                                            <li><span>Turing</span></li>
+                                            <li><span>Typescript</span></li>
+                                            <li><span>php</span></li>
                                         </p>
                                     </ul>
                                 </div>
@@ -287,7 +293,7 @@
                                         <div class="card-text">
                                             <span>
                                                 <p>
-                                                    A 3D TicTacToe Game. Check out the instructions 
+                                                    A 3D TicTacToe Game. Check out the instructions
                                                     <a href="https://github.com/AhmedHalat/2DTicTacToe/blob/master/README.md" target="_blank" rel="noreferrer">here</a>.
                                                     This project is still incomplete
                                                 </p>
