--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <div class="margin-center text-center">
                         <span class="subtitle"> You can find me on </span>
                         <div class="margin-center" style="margin-top:2%;">
-                            <a style="text-decoration: none;" href="https://www.linkedin.com/in/mohamed-halat/" target="_blank" rel="noreferrer">
+                            <a style="text-decoration: none;" href="https://www.linkedin.com/in/halat/" target="_blank" rel="noreferrer">
                                 <img src="images/LinkedIn.svg" alt="Linked In" >
                             </a>
                             <a style="text-decoration: none;" href="https://github.com/MohamedHalat" target="_blank" rel="noreferrer">
